Using GTS80 gen. 2 sound on Excalibur instead of gen. 3, enabling 8910 sounds (thanks to Jim Hernandez for noticing)
Fix some GTS3 DMD animations running too fast
Improved DMD brightness level mapping (again :)) for Gottlieb GTS3 & Alvin G.
Added extra display segments for some LTD-games, changed flipper enable for Sistema III
Improve Stern SB100 sound module tone frequencies

Change some more of the timing for the idle/throttle speed code
Fix a problem when using altsound packages (like the PinSound ones) and changing the machine volume (which resulted in doubled sounds from both emulation and altsound)
Fix some compiler issues/undefined code behavior (mainly relevant for mingw and unix/gcc builds at the moment)

Add LISY support (Linux for System1 & System80): one can control a Gottlieb pinball machine via PinMAME, special hardware needed, have a look at www.lisy80.com

Updated to zlib 1.2.11
Updated to latest Pin2DMD dlls

*** ROM SUPPORT *** Thanks to Flipprojets.fr for all the GTS80b-sets (plus Free Play patches), ipdb.org, exegeta for all the LTD and Taito games and clones, tecnopinball.org, Juan, Corey, barakandl, Pinfixer
New:
Bally: Boomerang prototype (and bootleg set)
LTD: Arizona
     Cowboy Eight Ball (and alternate set)
     Disco Dancing
     Force
     Haunted Hotel
     Hustler
     King Kong
     Martian Queen (only a bad dump exists which has been patched to make things work)
     Space Poker   (only a bad dump exists which has been patched to make things work)
     Time Machine  (only a bad dump exists which has been patched to make things work (4p version))
     Trick Shooter
     Viking King
MAC: Galaxy Play
Mirco: Spirit of 76
Playbar: Bloody Roller
Stargame: Slalom Code 0.3
          Space Ship
          White Force

Correct Dumps:
Bally: Flash Gordon (prototype rev. 1): Missing U10 dump was rediscovered
LTD: Columbia (previously supported was in fact one ROM from pecmen)
Taito: Lady Luck (sound dumps were the ones from Vegas before)